styles.css
body {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100vh;
	margin: 0;
	background: #222;
	font-family: 'Open Sans', sans-serif;

}

.container {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	width: 100%;
	max-width: 420px;
	margin: 1em auto;
	padding: 2em;
	border-radius: 14px;
	background: rgba(255, 255, 255, 0.6);
	z-index: 1;
	color: #222;
}

.input>input {
	border: none;
	outline: none;
	padding: 0.3rem;
	border-radius: 18px;
	color: #000;
	background: #7c7c7c2b;
	font-family: 'Open Sans', sans-serif;

}

button.button {
	border: none;
	width: 29px;
	padding: 6px;
	border-radius: 20px;
	background: #7c7c7c2b;
	color: #000;
	font-family: 'Open Sans', sans-serif;
	transition: (.5s);
}

button.button:focus {
	outline: none;
}

button.button:hover {
	background: #7c7c7c6b;
	color: #fff;
	cursor: pointer;
}

#backgroundVideo {
	position: fixed;
	top: 50%;
	left: 50%;
	min-width: 100%;
	min-height: 100%;
	width: auto;
	height: auto;
	object-fit: cover;
	transform: translate(-50%, -50%);
	background-size: cover;
	transition: 1s opacity;
	z-index: -1;
	pointer-events: none;
}

.displayWeather {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

footer {
	position: fixed;
	font-size: 0.8rem;
	bottom: 0;
	width: 100%;
	color: #222;
	text-align: center;
	padding: 10px;
	font-family: 'Open Sans', sans-serif;
      }

